# limeros

./: architecture.md  package-lock.json  package.json  readme.md
arduino/: platformio.ini
arduino/src/: main.cpp
coder/: Cargo.toml  Cross.toml  docker-compose.yml  full_json.md  todo.md
coder/apps/broker/: Cargo.toml  broker.md
coder/apps/broker/src/: main.rs
coder/apps/codegen/: Cargo.toml  readme.md
coder/apps/codegen/src/: main.rs
coder/apps/pinger/: Cargo.toml
coder/apps/pinger/src/: main.rs
coder/apps/serial_bridge/: Cargo.toml  readme.md
coder/apps/serial_bridge/src/: codec.rs  main.rs
coder/apps/sniffer/: Cargo.toml
coder/apps/sniffer/src/: main.rs
coder/apps/tui_sniffer/: Cargo.toml
coder/apps/tui_sniffer/src/: main.rs
coder/common/: Cargo.toml
coder/common/src/: base_message.rs  config.rs  endpoint.rs  fnv.rs  lib.rs  node.rs
coder/examples/: test_hcl.rs
coder/hcl/: cpp copy 2.tera  cpp.tera  cpp_header.tera  cpp_source.tera  robot.hcl  rust.tera
coder/src/: cpp_cbor.tera  cpp_cbor_inc.tera  cpp_cbor_src.tera  cpp_json_src.tera  cpp_mix_src.tera  generated.rs  lib.rs  main.rs  messages.h  rust_cbor.tera  rust_json.tera
coder/syntax/: message.proto
esp32-eventbus/: platformio.ini  sdkconfig.desoldering
esp32-eventbus/include/: actor.h  cbor_json_decoder.h  fnv.h  hoverboard_actor.h  hoverboard_event_raw.h  led_actor.h  max31855_actor.h  mc_actor.h  mdns_actor.h  msg.h  option.h  ota_actor.h  poly.h  poly_json.h  sys_actor.h  util.h  wifi_actor.h  zenoh_actor.h
esp32-eventbus/src/: actor.cpp  hoverboard_actor.cpp  hoverboard_event_raw.cpp  led_actor.cpp  main.cpp  max31855_actor.cpp  mc_actor.cpp  mdns_actor.cpp  msg.cpp  msgs.cpp  msgs.h  ota_actor.cpp  sys_actor.cpp  wifi_actor.cpp
rust/: Cargo.toml  dictionary.csv  install.sh
rust/src/: broker.md  broker.rs  eventbus.rs  lib.rs  msgs.rs  poly.rs  scout.rs
