[package]
name = "common"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["hcl-rs"]


[dependencies]
generated = { path = "../generated" }
serde = { version = "1.0.228", features = ["derive"] }
cbor2 = { version = "*", features = ["derive"] }
anyhow = "1.0.103"
env_logger = "0.11.8"
log = "0.4.29"
chrono = { version = "0.4", features = ["serde"] }
fnv = "1.0.7"
hcl-rs = "0.19"
regex = "1.12.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
