[package]
name = "broker"
version = "0.1.0"
edition = "2024"


[dependencies]
common = { path = "../../common" }
generated = { path = "../../generated" }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.103"
env_logger = "0.11.8"
log = "0.4.29"
clap = { version = "4.5.53", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
fnv = "1.0.7"
hcl-rs = "0.19"
regex = "1.12.4"
convert_case = "0.11.0"
hidapi = "2.6.6"
pest = "2.8.4"
pest_derive = "2.8.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[build-dependencies]
prost-build = "0.14.1"
